[tool.poetry]
name = "openiziai"
version = "0.1.0"
description = "Interface para se comunicar com a api da OpenAI adotando as melhores práticas de LLM para criar e se comunicar com um agente."
authors = ["RWallan <3am.richardwallan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7.1"
trio = "^0.25.1"
openai = "^1.30.1"
tqdm = "^4.66.4"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.2"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
ruff = "^0.4.4"
pytest-asyncio = "^0.23.7"
pytest-trio = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79

[tool.ruff.format]
preview = true
quote-style = "single"

[tool.ruff.lint]
select = ["I", "F", "E", "W", "PL", "PT"]

[tool.pytest.ini_options]
pythonpath = "."

[tool.taskipy.tasks]
lint = "ruff check . && ruff check . --diff"
format = "ruff check . --fix && ruff format ."
pre_test = "task lint"
test = "pytest -s -x -vv --cov=openiziai"
post_test = "coverage html"
