[tool.poetry]
name = "openiziai"
version = "0.1.0"
description = "Interface para se comunicar com a api da OpenAI adotando as melhores práticas de LLM para criar e se comunicar com um agente."
licence = "MIT"
authors = ["RWallan <3am.richardwallan@gmail.com>"]
readme = "README.md"
packages = [{include = "openiziai"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Portuguese (Brazilian)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.urls]
"Document" = "https://github.com/RWallan/openiziai/blob/main/README.md"
"Code" = "https://github.com/RWallan/openiziai.git"
"Bug Tracker" = "https://github.com/RWallan/openiziai/issues"


[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7.1"
trio = "^0.25.1"
openai = "^1.30.1"
tqdm = "^4.66.4"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.2"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
ruff = "^0.4.4"
pytest-asyncio = "^0.23.7"
pytest-trio = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79

[tool.ruff.format]
preview = true
quote-style = "single"

[tool.ruff.lint]
select = ["I", "F", "E", "W", "PL", "PT"]
ignore = ["PLC0414"]

[tool.pytest.ini_options]
pythonpath = "."

[tool.taskipy.tasks]
lint = "ruff check . && ruff check . --diff"
format = "ruff check . --fix && ruff format ."
pre_test = "task lint"
test = "pytest -s -x -vv --cov=openiziai"
post_test = "coverage html"
